--- a/package.json
+++ b/package.json
@@ -17,5 +17,18 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "babel-preset-react": "^6.24.1",
+        "flexbox-react": "^4.4.0",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
+        "react-redux": "^5.0.6",
+        "redux": "^3.7.2",
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^5.5.0",
+        "redux-promise-middleware": "^5.0.0",
+        "redux-thunk": "^2.2.0",
+        "styled-components": "^2.3.1"
     }
 }
