--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dependencies": {
         "babel-preset-react": "^6.24.1",
         "flexbox-react": "^4.4.0",
+        "history": "^4.7.2",
+        "history/createBrowserHistory": "latest",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-redux": "^5.0.6",
